--- a/about/index.html
+++ b/about/index.html
@@ -151,19 +151,30 @@ Currently, he works as a Principal Cloud DBA at <a href="https://cloudrede.com/"
 It didn&rsquo;t take long to realise that he wanted to work with SQL Server and so, eventually started his journey as a Production DBA at a SaaS financial company. Realising he had a knack for making systems more efficient, he transitioned to a Developer DBA role, bridging the gap between Infrastructure DBAs and developers.</p>
 <p>Fast forward many years, and Lee is now in a Principal DBA / consultant role, advising clients on how to get the most out of their cloud workloads.</p>
 <p>He holds certifications across a variety of Azure and AWS specialisms.</p>
-<img src="../img/BadgeBanner.png" alt="Certifications Awarded" style="width:90%; height:auto;">
+<img src="../img/BadgeBanner.png" alt="Certifications Awarded" style="width:100%; height:auto;">
 <br>
 <br>
 <br>
-<p>Lee has been recognized as a <a href="https://www.red-gate.com/hub/community/ambassadors/ambassador/LeeBrownhill/">Redgate Community Ambassador</a>. <br>
-<a href="https://www.red-gate.com/">Redgate</a> is renowned for its expertise in database development and DevOps, and as an ambassador,
-he has the opportunity to contribute to the SQL community, share insights, and help others make the most of Redgate’s tools. <br>
+<br>
+<table style="border:none; border-collapse:collapse; margin:0; padding:0; width:100%; background:none;">
+<tr>
+<td style="vertical-align:top; padding:0; width:80%; border:none; background:none;">
+<p>Lee has been recognized as a <a href="https://www.red-gate.com/hub/community/ambassadors/ambassador/LeeBrownhill/">Redgate Community Ambassador</a>.<br>
+Redgate is renowned for its expertise in database development and DevOps, and as an ambassador,  he has the opportunity to contribute to the SQL community, share insights, and help others make the most of Redgate’s tools.<br>
+<br>
+<br>
 Lee loves engaging with the community, writing about SQL topics, and supporting best practices in database development.</p>
-<p>   <img src="../img/2025_Community_AMBASSADOR_badge.png" alt="Redgate Community Ambassador" style="max-width: 110px; height: auto;"></p>
+</td>
+<td style="vertical-align:top; padding:0; width:20%; border:none; background:none; text-align:center;">
+  <img src="../img/2025_Community_AMBASSADOR_badge.png" alt="Redgate Community Ambassador" style="max-width:120px; height:auto;">
+</td>
+</tr>
+</table>
+<br>
 <br>
 <p>Lee is a regular attendee at tech events, particularly those focused on the Data Platform. Some of his favourites include <a href="https://sqlbits.com/">SQLBits</a>, <a href="https://datarelay.co.uk/">Data Relay</a>, and the <a href="https://www.red-gate.com/">Redgate Summit</a>. He deeply values the SQL Server community and remains grateful for the support and knowledge it has shared with him.</p>
 <a href="../img/sqlbits_2025.png" target="_blank">
-  <img src="../img/sqlbits_2025.png" alt="The SQLBits 2025 helper team" style="width:90%; height:auto;">
+  <img src="../img/sqlbits_2025.png" alt="The SQLBits 2025 helper team" style="width:100%; height:auto;">
 </a>
 <p><em>Helping out at SQLBits 2025 - Photo credit: <a href="https://www.linkedin.com/in/mikeybronowski/">Mikey Bronowski</a></em></p>
 <br>
