--- a/talks/index.html
+++ b/talks/index.html
@@ -10,7 +10,7 @@
   <meta property="og:site_name" content="Lee Brownhill&#39;s Blog">
   <meta property="og:title" content="Talks">
   <meta property="og:description" content="A curated archive of Lee’s podcast interviews, guest spots, and public discussions - sharing insights on SQL Server internals, cloud platforms such as Azure and AWS, DevOps workflows, and the human side of working with data.
-October 2025: Redgate Simple Talk Podcast June 2025: Finding Data Friends January 2025: SQL Squared">
+October 2025: Azure &amp; DevOps Podcast October 2025: Redgate Simple Talk Podcast June 2025: Finding Data Friends January 2025: SQL Squared">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -138,6 +138,12 @@ October 2025: Redgate Simple Talk Podcast June 2025: Finding Data Friends Januar
 			<br>
 <p>A curated archive of Lee&rsquo;s podcast interviews, guest spots, and public discussions - sharing insights on SQL Server internals, cloud platforms such as Azure and AWS, DevOps workflows, and the human side of working with data.</p>
 <hr>
+<h4 id="october-2025-azure--devops-podcast">October 2025: Azure &amp; DevOps Podcast</h4>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RT_YRJfSAUw?si=mnv48HoaUYV8J2z0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<br>
+<br>
+<br>
+<br>
 <h4 id="october-2025-redgate-simple-talk-podcast">October 2025: Redgate Simple Talk Podcast</h4>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/cWlLbjsgCwc?si=lIm20lmj3GuRGxyl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <br>
